db-cluster/users/k8s-cluster2/ns-pengseangsim210-gmail-com-9d7d574c/postgresp6o40j/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresp6o40j-tcp
  namespace: ns-pengseangsim210-gmail-com-9d7d574c
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`postgrest.seang.shop`)
    services:
    - name: postgresp6o40j-postgresql-rw
      port: 5432
  tls:
    passthrough: true
